--- a/debian/resources/fail2ban/freeswitch-ip.conf
+++ b/debian/resources/fail2ban/freeswitch-ip.conf
@@ -11,7 +11,7 @@
 # Values:  TEXT
 #
 #2014-12-01 00:47:54.331821 [WARNING] sofia_reg.c:2752 Can't find user [1000@xxx.xxx.xxx.xxx] from 62.210.151.162
-failregex = \[WARNING\] sofia_reg.c:2752 Can't find user \[.*@\d+.\d+.\d+.\d+\] from <HOST>
+failregex = \[WARNING\] sofia_reg.c:\d+ Can't find user \[.*@\d+.\d+.\d+.\d+\] from <HOST>
 
 # Option:  ignoreregex
 # Notes.:  regex to ignore. If this regex matches, the line is ignored.
