--- a/debian/resources/fail2ban/nginx-404.conf
+++ b/debian/resources/fail2ban/nginx-404.conf
@@ -1,5 +1,5 @@
 # Fail2Ban configuration file
 #
 [Definition]
-failregex = <HOST> - - \[.*\] "(GET|POST).*HTTP.* 404
+failregex = <HOST> - - \[.*\] "(GET|POST).*HTTP[^ ]* 404
 ignoreregex =
