--- a/debian/resources/letsencrypt/domain_name.conf
+++ b/debian/resources/letsencrypt/domain_name.conf
@@ -2,7 +2,7 @@
 # technically it's possible to have multiple of this lines, but it only worked
 # with one domain for me, another one only got one cert, so I would recommend
 # separate config files per domain.
-domains = domain_name.com
+domains = {domain_name.com}
 
 # increase key size
 rsa-key-size = 2048 # Or 4096
@@ -11,7 +11,7 @@ rsa-key-size = 2048 # Or 4096
 server = https://acme-v01.api.letsencrypt.org/directory
 
 # this address will receive renewal reminders
-email = username@email.com
+email = {email_address}
 
 # turn off the ncurses UI, we want this to be run as a cronjob
 text = True
