--- a/debian/resources/letsencrypt/domain_name.conf
+++ b/debian/resources/letsencrypt/domain_name.conf
@@ -2,7 +2,7 @@
 # technically it's possible to have multiple of this lines, but it only worked
 # with one domain for me, another one only got one cert, so I would recommend
 # separate config files per domain.
-domains = {domain_name.com}
+domains = {domain_name}
 
 # increase key size
 rsa-key-size = 2048 # Or 4096
