--- a/debian/resources/letsencrypt/domain_name.conf
+++ b/debian/resources/letsencrypt/domain_name.conf
@@ -19,4 +19,4 @@ text = True
 # authenticate by placing a file in the webroot (under .well-known/acme-challenge/)
 # and then letting LE fetch it
 authenticator = webroot
-webroot-path = /var/www/fusionpbx/
+webroot-path = /var/www/letsencrypt/
