--- a/freebsd/resources/nginx/fusionpbx.conf
+++ b/freebsd/resources/nginx/fusionpbx.conf
@@ -140,11 +140,11 @@ server {
         server_name  fusionpbx;
 
 	#set tls configuration
-	#ssl                     on;
-	#ssl_certificate         /etc/ssl/certs/nginx.crt;
-	#ssl_certificate_key     /etc/ssl/private/nginx.key;
-	#ssl_protocols           TLSv1 TLSv1.1 TLSv1.2;
-        #ssl_ciphers HIGH:!ADH:!MD5:!aNULL;
+	ssl                     on;
+	ssl_certificate         /usr/local/etc/nginx/server.crt;
+	ssl_certificate_key     /usr/local/etc/nginx/server.key;
+	ssl_protocols           TLSv1 TLSv1.1 TLSv1.2;
+        ssl_ciphers HIGH:!ADH:!MD5:!aNULL;
 
 	#letsencrypt
 	location /.well-known/acme-challenge {
