--- a/freebsd/resources/nginx/fusionpbx.conf
+++ b/freebsd/resources/nginx/fusionpbx.conf
@@ -58,10 +58,10 @@ server {
         }
 
 	#rewrite rule - send to https with an exception for provisioning
-	#if ($uri !~* ^.*provision.*$) {
-	#	rewrite ^(.*) https://$host$1 permanent;
-	#	break;
-	#}
+	if ($uri !~* ^.*provision.*$) {
+		rewrite ^(.*) https://$host$1 permanent;
+		break;
+	}
 
 	#rewrite rule - REST api
 	if ($uri ~* ^.*/api/.*$) {
