--- a/freebsd/resources/nginx/fusionpbx.conf
+++ b/freebsd/resources/nginx/fusionpbx.conf
@@ -58,7 +58,7 @@ server {
         }
 
 	#rewrite rule - send to https with an exception for provisioning
-	if ($uri !~* ^.*provision.*$) {
+	if ($uri !~* ^.*(provision|xml_cdr).*$) {
 		rewrite ^(.*) https://$host$1 permanent;
 		break;
 	}
