--- a/freebsd/resources/nginx/fusionpbx.conf
+++ b/freebsd/resources/nginx/fusionpbx.conf
@@ -51,6 +51,13 @@ server {
         error_log /var/log/nginx/error.log info;
         access_log /var/log/nginx/access.log;
 
+        #redirect letsencrypt to dehydrated
+        location ^~ /.well-known/acme-challenge {
+                default_type "text/plain";
+                auth_basic "off";
+                alias /usr/local/www/dehydrated;
+        }
+
 	#set the default index files 
         location / {
             root   /usr/local/www/fusionpbx;
@@ -154,14 +161,16 @@ server {
 	ssl_protocols           TLSv1 TLSv1.1 TLSv1.2;
         ssl_ciphers HIGH:!ADH:!MD5:!aNULL;
 
-	#letsencrypt
-	location /.well-known/acme-challenge {
-        	root /var/www/letsencrypt;
-	}
-
         #set the log files
         error_log /var/log/nginx/error.log info;
         access_log /var/log/nginx/access.log;
+
+        #redirect letsencrypt to dehydrated
+        location ^~ /.well-known/acme-challenge {
+                default_type "text/plain";
+                auth_basic "off";
+                alias /usr/local/www/dehydrated;
+        }
 
         #set the default index files
         location / {
