--- a/freebsd/resources/nginx/fusionpbx.conf
+++ b/freebsd/resources/nginx/fusionpbx.conf
@@ -31,7 +31,7 @@ server {
             include        fastcgi_params;
         }
 
-        #disable viewing of .htaccess, htpassword, and .db
+        #disable viewing of .htaccess, htpassword, .db and .git
         location ~ /\.htaccess {
                 deny  all;
         }
@@ -41,6 +41,9 @@ server {
         location ~^.+.(db)$ {
                 deny all;
         }
+	location ~ .git {
+		deny all;
+	}
 }
 
 server {
