--- a/freebsd/resources/nginx/fusionpbx.conf
+++ b/freebsd/resources/nginx/fusionpbx.conf
@@ -41,9 +41,12 @@ server {
         location ~^.+.(db)$ {
                 deny all;
         }
-	location ~ .git {
-		deny all;
-	}
+        location ~ /\.git {
+                deny all;
+        }
+        location ~ /\. {
+                deny all;
+        }
 }
 
 server {
@@ -145,7 +148,7 @@ server {
             include        fastcgi_params;
         }
 
-	#disable viewing of .htaccess, htpassword, and .db
+	#disable viewing of .htaccess, htpassword, .db, and .git
         location ~ /\.htaccess {
         	deny  all;
         }
@@ -155,6 +158,12 @@ server {
 	location ~^.+.(db)$ {
 		deny all;
 	}
+        location ~ /\.git {
+                deny all;
+        }
+        location ~ /\. {
+                deny all;
+        }
 }
 
 server {
@@ -261,7 +270,7 @@ server {
             include        fastcgi_params;
         }
 
-        #disable viewing of .htaccess, htpassword, and .db
+        #disable viewing of .htaccess, htpassword, .db, and .git
         location ~ /\.htaccess {
                 deny  all;
         }
@@ -269,6 +278,12 @@ server {
                 deny all;
         }
         location ~^.+.(db)$ {
+                deny all;
+        }
+        location ~ /\.git {
+                deny all;
+        }
+        location ~ /\. {
                 deny all;
         }
 
