FreeBSD fix. Using the freeswitch in pkg. postgresql 11. Using py37-fail2ban. etc..

--- a/freebsd/resources/nginx/fusionpbx.conf
+++ b/freebsd/resources/nginx/fusionpbx.conf
@@ -167,11 +167,11 @@ server {
 }
 
 server {
-        listen  443;
+        listen  443 ssl;
         server_name  fusionpbx;
 
 	#set tls configuration
-	ssl                     on;
+	#ssl                     on;
 	ssl_certificate         /usr/local/etc/nginx/server.crt;
 	ssl_certificate_key     /usr/local/etc/nginx/server.key;
 	ssl_protocols           TLSv1 TLSv1.1 TLSv1.2;
