--- a/freebsd/resources/nginx/fusionpbx.conf
+++ b/freebsd/resources/nginx/fusionpbx.conf
@@ -117,15 +117,15 @@ server {
 	#cisco
 	rewrite "^.*/provision/file/(.*\.(xml|cfg))" /app/provision/?file=$1 last;
 
-	#Escene
+	#escene
 	rewrite "^.*/provision/([0-9]{1,11})_Extern.xml$"       "/app/provision/?ext=$1&file={%24mac}_extern.xml" last;
 	rewrite "^.*/provision/([0-9]{1,11})_Phonebook.xml$" "/app/provision/?ext=$1&file={%24mac}_phonebook.xml" last;
 
-	#Vtech
+	#vtech
 	rewrite "^.*/provision/VCS754_([A-Fa-f0-9]{12})\.cfg$" /app/provision/?mac=$1;
 	rewrite "^.*/provision/pb([A-Fa-f0-9-]{12,17})/directory\.xml$" /app/provision/?mac=$1&file=directory.xml;
 
-    #Digium
+	#digium
 	rewrite "^.*/provision/([A-Fa-f0-9]{12})-contacts\.cfg$" "/app/provision/?mac=$1&file={%24mac}-contacts.cfg";
 	rewrite "^.*/provision/([A-Fa-f0-9]{12})-smartblf\.cfg$" "/app/provision/?mac=$1&file={%24mac}-smartblf.cfg";
 
@@ -167,11 +167,10 @@ server {
 }
 
 server {
-        listen  443;
+        listen  443 ssl;
         server_name  fusionpbx;
 
 	#set tls configuration
-	ssl                     on;
 	ssl_certificate         /usr/local/etc/nginx/server.crt;
 	ssl_certificate_key     /usr/local/etc/nginx/server.key;
 	ssl_protocols           TLSv1 TLSv1.1 TLSv1.2;
@@ -240,15 +239,15 @@ server {
         #cisco
         rewrite "^.*/provision/file/(.*\.(xml|cfg))" /app/provision/?file=$1 last;
 
-        #Escene
+        #escene
         rewrite "^.*/provision/([0-9]{1,11})_Extern.xml$"       "/app/provision/?ext=$1&file={%24mac}_extern.xml" last;
         rewrite "^.*/provision/([0-9]{1,11})_Phonebook.xml$" "/app/provision/?ext=$1&file={%24mac}_phonebook.xml" last;
 
-	#Vtech
+	#vtech
 	rewrite "^.*/provision/VCS754_([A-Fa-f0-9]{12})\.cfg$" /app/provision/?mac=$1;
 	rewrite "^.*/provision/pb([A-Fa-f0-9-]{12,17})/directory\.xml$" /app/provision/?mac=$1&file=directory.xml;
 
-    #Digium
+	#digium
 	rewrite "^.*/provision/([A-Fa-f0-9]{12})-contacts\.cfg$" "/app/provision/?mac=$1&file={%24mac}-contacts.cfg";
 	rewrite "^.*/provision/([A-Fa-f0-9]{12})-smartblf\.cfg$" "/app/provision/?mac=$1&file={%24mac}-smartblf.cfg";
 
