--- a/centos/resources/fusionpbx/config.conf
+++ b/centos/resources/fusionpbx/config.conf
@@ -4,8 +4,8 @@ database.0.type = pgsql
 database.0.host = {database_host}
 database.0.port = 5432
 database.0.sslmode=prefer
-database.0.name = {database_name}
-database.0.username = {database_username}
+database.0.name = fusionpbx
+database.0.username = fusionpbx
 database.0.password = {database_password}
 
 #database switch settings
