--- a/ubuntu/resources/fusionpbx/config.conf
+++ b/ubuntu/resources/fusionpbx/config.conf
@@ -9,14 +9,9 @@ database.0.username = {database_username}
 database.0.password = {database_password}
 
 #database switch settings
-database.1.type = pgsql
-database.1.host = {database_host}
-database.1.port = 5432
-database.1.sslmode = prefer
-database.1.name = freeswitch
-database.1.username = freeswitch
-database.1.password = {database_password}
-database.1.backend.base64 = 
+database.1.type = sqlite
+database.1.path = /var/lib/freeswitch/db
+database.1.name = core.db
 
 #general settings
 document.root = /var/www/fusionpbx
