--- a/debian/resources/fusionpbx/config.conf
+++ b/debian/resources/fusionpbx/config.conf
@@ -39,5 +39,6 @@ xml_handler.fs_path = false
 xml_handler.reg_as_number_alias = false
 xml_handler.number_as_presence_id = true
 
-#error reporting hide show all errors except notices and warnings
-error.reporting = 'E_ALL ^ E_NOTICE ^ E_WARNING'
+#error reporting options: user,dev,all
+error.reporting = user
+
