Update FreeBSD code
- While /usr/local/www/ is the correct prefix, the FusionPBX code itself
  still refers to /var/www/. So instead of fighting it, let's just
  symlink it.
- Updated the supported versions of PgSQL and PHP
- Moved the PgSQL client version logic to the PHP code, since we depend
  on the version of client that PHP is linked against. That's currently
  13, so to make it clean, let's just default to 13 for now.

After these changes, 5.1 appears to be fully functional for me. I had DB
schema issues with master, but I ran into the same issue on Debian, so
maybe it was a temporary master issue?

--- a/freebsd/resources/fusionpbx/config.conf
+++ b/freebsd/resources/fusionpbx/config.conf
@@ -14,7 +14,7 @@ database.1.path = /var/lib/freeswitch/db
 database.1.name = core.db
 
 #general settings
-document.root = /usr/local/www/fusionpbx
+document.root = /var/www/fusionpbx
 project.path =
 temp.dir = /tmp
 php.dir = /usr/local/bin
