--- a/freebsd/resources/nginx/fusionpbx.conf
+++ b/freebsd/resources/nginx/fusionpbx.conf
@@ -9,7 +9,7 @@ server {
 
 	#set the default index files
 	location / {
-		root   /usr/local/www/fusionpbx;
+		root   /var/www/fusionpbx;
 		index  index.php index.html index.htm;
 	}
 
@@ -20,14 +20,14 @@ server {
 	#http error handling
 	error_page   500 502 503 504  /50x.html;
 	location = /50x.html {
-		root   /usr/local/www/nginx-dist;
+		root   /var/www/nginx-dist;
 	}
 
 	#pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
 	location ~ \.php$ {
 		fastcgi_pass   127.0.0.1:9000;
 		fastcgi_index  index.php;
-		fastcgi_param  SCRIPT_FILENAME  /usr/local/www/fusionpbx$fastcgi_script_name;
+		fastcgi_param  SCRIPT_FILENAME  /var/www/fusionpbx$fastcgi_script_name;
 		include        fastcgi_params;
 	}
 
@@ -61,12 +61,12 @@ server {
 	location ^~ /.well-known/acme-challenge {
 		default_type "text/plain";
 		auth_basic "off";
-		alias /usr/local/www/dehydrated;
+		alias /var/www/dehydrated;
 	}
 
 	#set the default index files
 	location / {
-		root   /usr/local/www/fusionpbx;
+		root   /var/www/fusionpbx;
 		index  index.php index.html index.htm;
 	}
 
@@ -136,14 +136,14 @@ server {
 	#http error handling
 	error_page   500 502 503 504  /50x.html;
 	location = /50x.html {
-		root   /usr/local/www/nginx-dist;
+		root   /var/www/nginx-dist;
 	}
 	
 	#pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
 	location ~ \.php$ {
 		fastcgi_pass   127.0.0.1:9000;
 		fastcgi_index  index.php;
-		fastcgi_param  SCRIPT_FILENAME  /usr/local/www/fusionpbx$fastcgi_script_name;
+		fastcgi_param  SCRIPT_FILENAME  /var/www/fusionpbx$fastcgi_script_name;
 		include        fastcgi_params;
 	}
 
@@ -183,12 +183,12 @@ server {
 	location ^~ /.well-known/acme-challenge {
 		default_type "text/plain";
 		auth_basic "off";
-		alias /usr/local/www/dehydrated;
+		alias /var/www/dehydrated;
 	}
 
 	#set the default index files
 	location / {
-		root   /usr/local/www/fusionpbx;
+		root   /var/www/fusionpbx;
 		index  index.php index.html index.htm;
 	}
 
@@ -260,14 +260,14 @@ server {
 	#http error handling
 	error_page   500 502 503 504  /50x.html;
 	location = /50x.html {
-		root   /usr/local/www/nginx-dist;
+		root   /var/www/nginx-dist;
 	}
 
 	#pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
 	location ~ \.php$ {
 		fastcgi_pass   127.0.0.1:9000;
 		fastcgi_index  index.php;
-		fastcgi_param  SCRIPT_FILENAME  /usr/local/www/fusionpbx$fastcgi_script_name;
+		fastcgi_param  SCRIPT_FILENAME  /var/www/fusionpbx$fastcgi_script_name;
 		include        fastcgi_params;
 	}
 
