update pf.conf Remove this line.   anti-spoof quick for all It created an error.

--- a/freebsd/resources/pf/pf.conf
+++ b/freebsd/resources/pf/pf.conf
@@ -5,11 +5,11 @@
 #normalize packets
 scrub in all
 
+#prevent spoofing on the loopback
+antispoof for lo0
+
 #skip rule for loopback interface
 set skip on lo0
-
-#prevent spoofing for all interfaces
-antispoof quick for all
 
 #allow traffic on loopback
 pass quick on lo0 all
