--- a/freebsd/resources/fusionpbx/config.conf
+++ b/freebsd/resources/fusionpbx/config.conf
@@ -20,6 +20,11 @@ temp.dir = /tmp
 php.dir = /usr/local/bin
 php.bin = php 
 
+#session settings
+session.cookie_httponly = true
+session.cookie_secure = true
+session.cookie_samesite = Lax
+
 #cache settings
 cache.method = file
 cache.location = /var/cache/fusionpbx
